Agent query: 以下の基本機能が正しく動作しているか確認してください： 1. 状態の追加：キャンバス上でクリックして新しい状態を追加できるか 2. 状態の編集：状態をダブルクリックして名前を編集できるか 3. 状態の移動：ドラッグモードで状態を移動できるか 4. 遷移の追加：トランジションモードで2つの状態を選択して遷移を追加できるか 5. 遷移の編集：遷移をダブルクリックしてラベルを編集できるか 6. 削除：状態や遷移を削除モードで削除できるか

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "strict": true,
     "target": "es2015",
     "downlevelIteration": true,
+    "downlevelIteration": true,
     "lib": ["esnext", "dom", "dom.iterable"],
     "jsx": "preserve",
     "esModuleInterop": true,
