--- a/package.json
+++ b/package.json
@@ -78,18 +78,18 @@
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
-    "@types/react": "^18.3.11",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.27.1",
     "esbuild": "^0.24.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "tsx": "^4.19.1",
-    "typescript": "5.6.3",
-    "vite": "^5.4.9",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.11",
     "vite-plugin-checker": "^0.8.0"
   },
   "optionalDependencies": {
